# BasicOfProgramming

./: .gitignore  CMakeLists.txt  README.md
lab1/: CMakeLists.txt  celsius-fahrenheit.c  coucou.c  fahrenheit-celsius.c  formating.c  money.c  painting.c
lab10/: 1MemoryHandlingError.c  1MemoryHandlingError2.c  2PrintTheList.c  3LengthOfTheList.c  4DeleteTheList.c  5insertAtHead.c  6InsertAtTheEnd.c  7SearchAValue.c  81CopyingAList.c  82DeleteTheFifthElement.c  83InsertIntoFifthPosition.c  84FromHeadToEnd.c  85FromEndToHead.c  CMakeLists.txt
lab11/: 2DynamicDuplicateOfAString.c  3DynamicAppend.c  4Substring.c  5InsertTextInTheString.c  CMakeLists.txt
lab13/: 2BuildingATree.c  3PrintingAndDeletingAtTree.c  4NumberOfNodes.c  5SearchAValue.c  6NegateValues.c  8-1SantaClaus.c  8-2ListOrTree.c  8-3ExactlyTwoOrZeroChildren.c  CMakeLists.txt
lab2/: AllNumbers.c  CMakeLists.txt  CubicRoot.c  Divisors.c  LenghtOfALine.c  LineOfGivenLength.c  LoopsPrintingNumbers.c  NthElement.c  ParabolicEquation.c  Power.c  Spheres.c  SquareNumbers.c  SquareOfAGiveSize.c  error.c
lab3/: AverageOfLastFiveValues.c  CMakeLists.txt  CharacterCodes.c  HighwayI.c  HighwayII.c  IndexingOutOfBound.c  Least.c  LessOrGreater.c  Monotony.c  PrettyPrintingArray.c  Product.c  ProductOfNumbers.c  River.c  ShiftingArray.c  StatisticOfMidSemesterTestI.c  StatisticsOnLetters.c  SumOfDivisors.c  printbubble.c
lab5/: BitsOfANumber.c  CMakeLists.txt  Drawing.c  FloatingPointNumbers.c  FractionOfHightComplexity.c  InfiniteLoop.c  PowerOf2.c  TheSecretOfBits.c  test1.c
lab6/: CMakeLists.txt  CompingdataType.c  Fence.c  FunctionsBasics.c  MenuControlledProgram.c  OverlappingCircles.c  Stammering.c  Vectors.c
lab7/: 2WhereDoPointersPointTo.c  3Cube.c  4ArrayAndFunctiin.c  5Vertically.c  6Trimmer.c  71AtLeartTwice.c  72Sorted.c  73UniqueValue.c  74BitShifting.c  CMakeLists.txt
lab8/: 1Fibonacci.c  2ArrayForwardAndBackwards.c  3QuickPower.c  4NumeralSystem.c  5PrettyPrintNumber.c  CMakeLists.txt
lab9/: 1ValuesBackwards.c  2ValuesBackwardsAgain.c  3ReadingInALongLine.c  5SeparateOddEven.c  5Stammering2.c  (+2 more)
